feat: direct loading of record classes (#115)
* feat: add support for Java Records in YAML serialization/deserialization

- Support Map<String, RecordType> with automatic record conversion
- Support nested records (records containing other records)
- Support List<RecordType> for collections of records
- Bump Java version to 17 to enable record support
- Add comprehensive test coverage for all record scenarios

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>

* refactor: split YamlFileInterface into separate logical components

- Extract type conversion logic into TypeConverter class
- YamlFileInterface now focused on file I/O and field processing
- Add support for records containing collections (List<Record>)
- Fix empty collection serialization (now preserves [] instead of null)
- Add tests for records with collections

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>

* test: update empty collection tests to expect correct behavior

Empty collections now correctly survive save/load cycles as empty
collections instead of becoming null.

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>

* Ignore claude json file

* docs: add comprehensive documentation

- Add docs/getting-started.md - installation and basic usage
- Add docs/types.md - all supported data types
- Add docs/annotations.md - annotation reference
- Add docs/records.md - Java Records documentation
- Add docs/advanced.md - leniency, custom types, edge cases
- Add docs/examples.md - real-world examples
- Update README.md to be concise with links to docs

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>

* Reformatting

* test: add tests for records with secondary constructors

- Add AltarDefinition record mimicking user's use case
- Test Map<String, Record> with complex record structure
- Test Map<Enum, Integer> as record component
- Test loading from existing YAML file
- All 5 new tests pass

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>

* sonar adjustments

* test: i